# tmcl

./: .gitattributes  .gitignore  LICENSE  README.md
ncore/: CMakeLists.txt
ncore/data/8_high_res/: YouBotMap.yaml
ncore/data/floor/2021_10_27/: YouBotMap.yaml  nmcl.config
ncore/data/floor/Faro/: nmcl.config
ncore/data/floor/GMap/: GMap.yaml  editor.xml  floor.config  nmcl.config
ncore/data/floor/test/: YouBotMap.pgm  editor.xml  floor.config  floor_seeds.xml  nmcl.config
ncore/data/json/: nmcl.config
ncore/ndl/: CMakeLists.txt
ncore/ndl/include/: TextSpotting.h
ncore/ndl/src/: CMakeLists.txt  TextSpotting.cpp
ncore/ndl/tst/: CMakeLists.txt  NDLUnitTests.cpp
ncore/nengine/: CMakeLists.txt
ncore/nengine/include/: DataFrameLoader.h  NMCLEngine.h
ncore/nengine/src/: DataFrameLoader.cpp  NMCLEngine.cpp
ncore/nengine/tst/: CMakeLists.txt  EngineBenchmark.cpp  main.cpp
ncore/nmap/: CMakeLists.txt
ncore/nmap/data/: YouBotMap.pgm  YouBotMap.yaml
ncore/nmap/include/: FloorMap.h  GMap.h  IMap2D.h  Object.h  Room.h
ncore/nmap/src/: FloorMap.cpp  GMap.cpp  Object.cpp  Room.cpp
ncore/nmap/tst/: CMakeLists.txt  NMapUnitTests.cpp
ncore/nmcl/: CMakeLists.txt
ncore/nmcl/include/: AggressiveLowVarianceResampling.h  BeamEnd.h  FSR.h  GaussianPredictStrategy.h  LidarData.h  LowVarianceResampling.h  MixedFSR.h  MotionModel.h  NMCL.h  NMCLFactory.h  PlaceRecognition.h  PredictStrategy.h  ReNMCL.h  Resampling.h  SensorData.h  SensorModel.h  UniformPredictStrategy.h
ncore/nmcl/src/: AggressiveLowVarianceResampling.cpp  BeamEnd.cpp  CMakeLists.txt  FSR.cpp  GaussianPredictStrategy.cpp  LowVarianceResampling.cpp  MixedFSR.cpp  NMCL.cpp  NMCLFactory.cpp  PlaceRecognition.cpp  ReNMCL.cpp  UniformPredictStrategy.cpp
ncore/nmcl/tst/: CMakeLists.txt  NMCLUnitTests.cpp
ncore/nsensors/: CMakeLists.txt
ncore/nsensors/include/: Camera.h
ncore/nsensors/src/: Camera.cpp
ncore/nsensors/tst/: CMakeLists.txt
ros1_ws/src/evaluation/: CMakeLists.txt  package.xml
(+57 files in other folders)
